@@ -6976,8 +6976,9 @@ test io-53.9 {CopyData: -size and event interaction, Bug 780533} -setup {
 } -cleanup {
     close $pipe
     rename ::done {}
-    removeFile out
-    removeFile err
+    after 1000;			# Give Windows time to kill the process
+    catch {removeFile out}
+    catch {removeFile err}
     catch {unset ::forever}
 } -result OK
 
